--- a/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
+++ b/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
@@ -749,6 +749,7 @@ set_global_assignment -name PROJECT_IP_REGENERATION_POLICY SKIP_REGENERATING_IP_
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE FIFOqueue/FIFO_queue.vhd
 set_global_assignment -name VHDL_FILE stack_game_logic_module.vhd
 set_global_assignment -name VHDL_FILE DE10_Standard_xxx.vhd
 set_global_assignment -name VHDL_FILE lt24_drawrect_module.vhd
@@ -761,4 +762,5 @@ set_global_assignment -name VHDL_FILE LT24setup/LT24InitReset.vhd
 set_global_assignment -name VHDL_FILE LT24setup/LT24InitLCD.vhd
 set_global_assignment -name VHDL_FILE LT24setup/Init128rom_pkg.vhd
 set_global_assignment -name SDC_FILE DE10_Standard_xxx.sdc
+set_global_assignment -name QIP_FILE FIFOqueue/RAM_module.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
