--- a/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
+++ b/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
@@ -336,38 +336,38 @@ set_location_assignment PIN_AA12 -to LT24_LCD_ON
 #============================================================
 # HEX0
 #============================================================
-# set_location_assignment PIN_W17 -to HEX0[0]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[0]
-# set_location_assignment PIN_V18 -to HEX0[1]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[1]
-# set_location_assignment PIN_AG17 -to HEX0[2]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[2]
-# set_location_assignment PIN_AG16 -to HEX0[3]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[3]
-# set_location_assignment PIN_AH17 -to HEX0[4]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[4]
-# set_location_assignment PIN_AG18 -to HEX0[5]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[5]
-# set_location_assignment PIN_AH18 -to HEX0[6]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[6]
+set_location_assignment PIN_W17 -to HEX0[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[0]
+set_location_assignment PIN_V18 -to HEX0[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[1]
+set_location_assignment PIN_AG17 -to HEX0[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[2]
+set_location_assignment PIN_AG16 -to HEX0[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[3]
+set_location_assignment PIN_AH17 -to HEX0[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[4]
+set_location_assignment PIN_AG18 -to HEX0[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[5]
+set_location_assignment PIN_AH18 -to HEX0[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX0[6]
 
 #============================================================
 # HEX1
 #============================================================
-# set_location_assignment PIN_AF16 -to HEX1[0]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[0]
-# set_location_assignment PIN_V16 -to HEX1[1]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[1]
-# set_location_assignment PIN_AE16 -to HEX1[2]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[2]
-# set_location_assignment PIN_AD17 -to HEX1[3]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[3]
-# set_location_assignment PIN_AE18 -to HEX1[4]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[4]
-# set_location_assignment PIN_AE17 -to HEX1[5]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[5]
-# set_location_assignment PIN_V17 -to HEX1[6]
-# set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[6]
+set_location_assignment PIN_AF16 -to HEX1[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[0]
+set_location_assignment PIN_V16 -to HEX1[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[1]
+set_location_assignment PIN_AE16 -to HEX1[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[2]
+set_location_assignment PIN_AD17 -to HEX1[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[3]
+set_location_assignment PIN_AE18 -to HEX1[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[4]
+set_location_assignment PIN_AE17 -to HEX1[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[5]
+set_location_assignment PIN_V17 -to HEX1[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to HEX1[6]
 
 #============================================================
 # HEX2
@@ -749,6 +749,7 @@ set_global_assignment -name PROJECT_IP_REGENERATION_POLICY SKIP_REGENERATING_IP_
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VHDL_FILE hex_7seg.vhd
 set_global_assignment -name VHDL_FILE FIFOqueue/FIFO_queue.vhd
 set_global_assignment -name VHDL_FILE stack_game_logic_module.vhd
 set_global_assignment -name VHDL_FILE DE10_Standard_xxx.vhd
@@ -763,4 +764,5 @@ set_global_assignment -name VHDL_FILE LT24setup/LT24InitLCD.vhd
 set_global_assignment -name VHDL_FILE LT24setup/Init128rom_pkg.vhd
 set_global_assignment -name SDC_FILE DE10_Standard_xxx.sdc
 set_global_assignment -name QIP_FILE FIFOqueue/RAM_module.qip
+
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
