--- a/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
+++ b/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
@@ -148,7 +148,7 @@ set_location_assignment PIN_AA12 -to LT24_LCD_ON
 # set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LT24_LCD_ON
 
 #=== UART_RX ===
-# set_location_assignment PIN_AH5 -to UART_RX
+set_location_assignment PIN_AH5 -to UART_RX
 # set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to UART_RX
 
 #============================================================
@@ -749,6 +749,9 @@ set_global_assignment -name PROJECT_IP_REGENERATION_POLICY SKIP_REGENERATING_IP_
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+
+
+set_global_assignment -name VHDL_FILE uart_module.vhd
 set_global_assignment -name VHDL_FILE hex_7seg.vhd
 set_global_assignment -name VHDL_FILE FIFOqueue/FIFO_queue.vhd
 set_global_assignment -name VHDL_FILE stack_game_logic_module.vhd
