--- a/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
+++ b/DE10-Standard-Stack-Game/DE10_Standard_xxx.qsf
@@ -751,6 +751,8 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 
+
+set_global_assignment -name VHDL_FILE Hex7Seg/hex_7seg.vhd
 set_global_assignment -name VHDL_FILE uart_module.vhd
 set_global_assignment -name VHDL_FILE hex_7seg.vhd
 set_global_assignment -name VHDL_FILE FIFOqueue/FIFO_queue.vhd
@@ -767,5 +769,7 @@ set_global_assignment -name VHDL_FILE LT24setup/LT24InitLCD.vhd
 set_global_assignment -name VHDL_FILE LT24setup/Init128rom_pkg.vhd
 set_global_assignment -name SDC_FILE DE10_Standard_xxx.sdc
 set_global_assignment -name QIP_FILE FIFOqueue/RAM_module.qip
-
+set_global_assignment -name VHDL_FILE LT24drawrect/lt24_drawrect_module.vhd
+set_global_assignment -name VHDL_FILE StackGame/stack_game_logic_module.vhd
+set_global_assignment -name VHDL_FILE UART/uart_module.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
